[gd_scene load_steps=4 format=3 uid="uid://dcc1r64ba6itj"]

[ext_resource type="Script" path="res://ui/settings_menu/settings_menu.gd" id="1_g0wed"]
[ext_resource type="Script" path="res://addons/sliderlabel/sliderlabel.gd" id="2_krd3l"]

[sub_resource type="GDScript" id="GDScript_gmak4"]
script/source = "extends PanelContainer


"

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_g0wed")

[node name="SplitContainer" type="SplitContainer" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 645.0
dragger_visibility = 1
vertical = true

[node name="PanelContainer" type="PanelContainer" parent="SplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="SplitContainer/PanelContainer"]
layout_mode = 2

[node name="SETTINGS_TAB_DISPLAY" type="BoxContainer" parent="SplitContainer/PanelContainer/TabContainer"]
layout_mode = 2
vertical = true

[node name="FullscreenToggleBtn" type="CheckBox" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_DISPLAY"]
layout_mode = 2
text = "SETTING:FULLSCREEN"

[node name="SETTINGS_TAB_CAMERA" type="BoxContainer" parent="SplitContainer/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
vertical = true

[node name="cam_speed_label" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
text = "SETTING:CAMERA_SPEED_LABEL"

[node name="cam_speed_slider" type="HSlider" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 30.0
step = 0.25
value = 15.0

[node name="SliderLabel" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA/cam_speed_slider"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 23.0
size_flags_horizontal = 4
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_krd3l")
metadata/_edit_initialized_ = true

[node name="HSeparator" type="HSeparator" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2

[node name="edge_margin_label" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
text = "SETTING:CAMERA_EDGE_MARGIN_LABEL"

[node name="edge_margin_slider" type="HSlider" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 15.0
max_value = 150.0
value = 15.0
rounded = true

[node name="SliderLabel" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA/edge_margin_slider"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 23.0
size_flags_horizontal = 4
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_krd3l")
metadata/_edit_initialized_ = true

[node name="HSeparator2" type="HSeparator" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2

[node name="max_zoom_label" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
text = "SETTING:CAMERA_MAX_ZOOM_LABEL"

[node name="max_zoom_slider" type="HSlider" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
step = 0.25
value = 25.0
exp_edit = true

[node name="SliderLabel" type="Label" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA/max_zoom_slider"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 23.0
size_flags_horizontal = 4
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_krd3l")
metadata/_edit_initialized_ = true

[node name="HSeparator3" type="HSeparator" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2

[node name="CamCenteredToggleBtn" type="CheckBox" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2
text = "SETTING:CAMERA_CENTERED"

[node name="HSeparator4" type="HSeparator" parent="SplitContainer/PanelContainer/TabContainer/SETTINGS_TAB_CAMERA"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="SplitContainer"]
layout_mode = 2
script = SubResource("GDScript_gmak4")

[node name="GridContainer" type="GridContainer" parent="SplitContainer/PanelContainer2"]
clip_contents = true
layout_mode = 2
columns = 4

[node name="ConfirmBtn" type="Button" parent="SplitContainer/PanelContainer2/GridContainer"]
layout_mode = 2
action_mode = 0
text = "SETTINGS_MENU_CONFIRM"

[node name="ExitBtn" type="Button" parent="SplitContainer/PanelContainer2/GridContainer"]
layout_mode = 2
action_mode = 0
text = "SETTINGS_MENU_EXIT_GAME"
